# pycrawler

./: .gitignore  pyproject.toml
pycrawler/: __main__.py  config.py  crawler.py  fetch.py  languages.py  meta.py  page.py  utils.py  w2v.py
pycrawler/data/: stopwords.json
pycrawler/db/: __init__.py  qdrant.py
pycrawler/models/: __init__.py
